@@ -422,3 +422,4 @@ current
 * pheno:   added scoreboard ready icons during intermission
 * pheno:   reworked ready icons code and made bots more visible on the
            scoreboard
+* pheno:   fixed broken scoreboard on more than 30 players
